ローカルにあったファイルを一斉コミット

--- a/picoCTF/2021/forensic/like1000.md
+++ b/picoCTF/2021/forensic/like1000.md
@@ -1,5 +1,7 @@
-﻿問題名：like1000
-分野：forensic
+﻿# like1000
+## picoCTF2021
+## forensic
+***
 
 問題ファイルがtarで圧縮されているため、解凍してみる
 tar -xvf 1000.tar
@@ -9,7 +11,7 @@ tar -xvf 1000.tar
 どうやら1000回解凍する必要があるらしい
 やってられないのでシェルスクリプトを書いて自動で解凍する
 
-for((i=1000;i>0;i--));
+> for((i=1000;i>0;i--));
 do tar -xvf $i.tar;
 done
 
